--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity
+            android:name=".activities.MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +24,12 @@
         <activity
             android:name=".activities.MovieDetailsActivity"
             android:label="@string/movie_details_activity_label"
-            android:parentActivityName=".activities.MainActivity"/>
+            android:parentActivityName=".activities.MainActivity" />
+
+        <provider
+            android:name=".data.MoviesProvider"
+            android:authorities="@string/movies_content_authority"
+            android:exported="false" />
     </application>
 
 </manifest>
